--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -18,9 +18,9 @@
   --vp-home-hero-image-background-image: linear-gradient(
     -25deg,
     #EC4619 50%,
-    #066AFF 50%
+    #EC4619 50%
   );
-  --vp-home-hero-image-filter: blur(44px);
+  --vp-home-hero-image-filter: blur(84px);
   --vp-home-hero-image-transform: rotate(10deg);
 }
 
